examples/good/functions.ps
### Nested functions ###

int foo() {
    return 66;
}

int boo() {
    return foo();
}

int fun() {
    int foo() {
        return 42;
    }
    return foo();
}

foo(); # == 66
fun(); # == 42
foo(); # == 66


### Reference vs Value

int change_num(int a) {
    a = -1;
    return 0;
}

int x = 42;
change_num(x);
# x == 42

change_num(&x);
# x == -1


