examples/bad/static_error_return_outside_function.ps
int id(int x) {
    return x;
}

println(id(42));
return 42;
println(id(42));